--- a/HttpClients/HttpClients.csproj
+++ b/HttpClients/HttpClients.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="ClientInterfaces" />
+      <Folder Include="Implementations" />
+    </ItemGroup>
+
 </Project>
