Created classes for user story 1

--- a/BlazorApp/BlazorApp.csproj
+++ b/BlazorApp/BlazorApp.csproj
@@ -16,4 +16,9 @@
       <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Auth" />
+      <Folder Include="Services" />
+    </ItemGroup>
+
 </Project>
